From moth plushie to moff plushie and more way to get moffs!

--- a/Resources/Prototypes/Catalog/Fills/Crates/cargo.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/cargo.yml
@@ -299,8 +299,23 @@
     - id: PlushieSharkBlue
       prob: 0.01
       orGroup: Plushies
-    - id: PlushieMoth
+    - id: PlushieMoff
       prob: 0.01
+      orGroup: Plushies
+    - id: PlushieMoffRainbow
+      prob: 0.005
+      orGroup: Plushies
+    - id: PlushieMoffsician
+      prob: 0.005
+      orGroup: Plushies
+    - id: PlushieMoffBar
+      prob: 0.005
+      orGroup: Plushies
+    - id: PlushieMoffBluespace
+      prob: 0.005
+      orGroup: Plushies
+    - id: PlushieMoffrror
+      prob: 0.005
       orGroup: Plushies
     - id: PlushieArachind
       prob: 0.01
