--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/arcades.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/arcades.yml
@@ -124,7 +124,7 @@
     - BirdToyInstrument
     - PlushieXeno
     - BeachBall
-    - PlushieMoth
+    - PlushieMoffRandom
     - PlushieHampter
     - PlushiePenguin
     - PlushieHuman
