--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -7,6 +7,9 @@
   loadouts:
   - PlushieLizard
   - PlushieSpaceLizard
+  - PlushieMoff
+  - PlushieMoffBar
+  - PlushieMoffRainbow
   - Lighter
   - CigPackGreen
   - CigPackRed
