--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -420,3 +420,6 @@ ClothingBackpackDuffelSyndicateCostumeCentcom: null
 ClothingHeadsetAltCentComFake: null
 CentcomPDAFake: null
 CentcomIDCardSyndie: null
+
+# 2024-09-06
+PlushieMoth: PlushieMoffRandom
