--- a/Resources/Prototypes/Catalog/Cargo/cargo_fun.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_fun.yml
@@ -109,6 +109,16 @@
   group: market
 
 - type: cargoProduct
+  id: FunMoffPlushies
+  icon:
+    sprite: Objects/Fun/moff_plushie.rsi
+    state: moff
+  product: CrateFunMoffPlushieBulk
+  cost: 500
+  category: cargoproduct-category-name-fun
+  group: market
+
+- type: cargoProduct
   id: FunBoardGames
   icon:
     sprite: Objects/Fun/dice.rsi
