--- a/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
@@ -36,9 +36,75 @@
     - id: PlushieDiona
     - id: PlushieXeno
     - id: PlushieHampter
-    - id: PlushieMoth
+    - !type:GroupSelector
+      children:
+      - id: PlushieMoff
+      - id: PlushieMoffMonarch
+      - id: PlushieMoffLuna
+      - id: PlushieMoffAtlas
+      - id: PlushieMoffRedish
+      - id: PlushieMoffRoyal
+      - id: PlushieMoffGothic
+      - id: PlushieMoffLovers
+      - id: PlushieMoffWhitefly
+      - id: PlushieMoffFirewatch
+      - id: PlushieMoffDeadhead
+      - id: PlushieMoffPoison
+      - id: PlushieMoffRagged
+      - id: PlushieMoffSnow
+      - id: PlushieMoffClockwork
+      - id: PlushieMoffMoonfly
+      - id: PlushieMoffWitchwing
+      - id: PlushieMoffPlasmafire
+      - id: PlushieMoffBrown
+      - id: PlushieMoffRosy
+      - id: PlushieMoffRainbow
+        weight: 0.5
+      - id: PlushieMoffsician
+        weight: 0.5
+      - id: PlushieMoffBar
+        weight: 0.5
+      - id: PlushieMoffBluespace
+        weight: 0.5
+      - id: PlushieMoffrror
+        weight: 0.25
     - id: PlushieArachind
     - id: PlushiePenguin
+
+- type: entityTable
+  id: AllMoffsPlushieTable
+  table: !type:GroupSelector
+    children:
+      - id: PlushieMoff
+      - id: PlushieMoffMonarch
+      - id: PlushieMoffLuna
+      - id: PlushieMoffAtlas
+      - id: PlushieMoffRedish
+      - id: PlushieMoffRoyal
+      - id: PlushieMoffGothic
+      - id: PlushieMoffLovers
+      - id: PlushieMoffWhitefly
+      - id: PlushieMoffFirewatch
+      - id: PlushieMoffDeadhead
+      - id: PlushieMoffPoison
+      - id: PlushieMoffRagged
+      - id: PlushieMoffSnow
+      - id: PlushieMoffClockwork
+      - id: PlushieMoffMoonfly
+      - id: PlushieMoffWitchwing
+      - id: PlushieMoffPlasmafire
+      - id: PlushieMoffBrown
+      - id: PlushieMoffRosy
+      - !type:GroupSelector #Rare plush
+        weight: 3
+        children:
+        - id: PlushieMoffRainbow
+        - id: PlushieMoffsician
+        - id: PlushieMoffBar
+        - id: PlushieMoffBluespace
+          weight: 0.5
+        - id: PlushieMoffrror
+          weight: 0.25
 
 - type: entity
   id: CrateFunPlushie
@@ -52,6 +118,19 @@
         tableId: AllPlushiesTable
         rolls: !type:ConstantNumberSelector
           value: 10
+
+- type: entity
+  id: CrateFunMoffPlushieBulk
+  parent: CratePlastic
+  name: bulk moff plushie crate
+  description: A buncha soft moff plushies. Throw them around, eat them, play with them! And then wonder how you're gonna explain this purchase to NT... *chitters!*
+  components:
+  - type: EntityTableContainerFill
+    containers:
+      entity_storage: !type:NestedSelector
+        tableId: AllMoffsPlushieTable
+        rolls: !type:ConstantNumberSelector
+          value: 7
 
 - type: entity
   id: CrateFunLizardPlushieBulk
