--- a/Resources/Prototypes/Entities/Clothing/Head/helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/helmets.yml
@@ -449,6 +449,9 @@
     energy: 1.4
     color: red
     netsync: false
+    mask: /Textures/Effects/LightMasks/double_cone.png
+  - type: RotatingLight
+    speed: 360
   - type: PowerCellSlot
     cellSlotId: cell_slot
   - type: ContainerContainer
