Padded out depth 4 triggers

--- a/Resources/Prototypes/XenoArch/artifact_triggers.yml
+++ b/Resources/Prototypes/XenoArch/artifact_triggers.yml
@@ -194,5 +194,46 @@
   components:
   - type: ArtifactResurrectionTrigger
 
+- type: artifactTrigger
+  id: TriggerVape
+  targetDepth: 4
+  triggerHint: artifact-trigger-hint-vape
+  components:
+  - type: ArtifactGasTrigger
+    possibleGas:
+    - WaterVapor
+
+# Below exist to pad out the depth 4 triggers. Can remove some of those when we get more triggers implemented
+- type: artifactTrigger
+  id: TriggerMusicDeep
+  targetDepth: 4
+  triggerHint: artifact-trigger-hint-music
+  components:
+  - type: ArtifactMusicTrigger
+
+- type: artifactTrigger
+  id: TriggerExamineDeep
+  targetDepth: 4
+  triggerHint: artifact-trigger-hint-examine
+  components:
+  - type: ArtifactExamineTrigger
+
+- type: artifactTrigger
+  id: TriggerAnchorDeep
+  targetDepth: 4
+  triggerHint: artifact-trigger-hint-tool
+  blacklist:
+    components:
+    - Item
+  components:
+  - type: ArtifactAnchorTrigger
+
+- type: artifactTrigger
+  id: TriggerMagnetDeep
+  targetDepth: 4
+  triggerHint: artifact-trigger-hint-magnet
+  components:
+  - type: ArtifactMagnetTrigger
+
 #don't add in new targetdepth values until you have a few
 #or else it will skew heavily towards a few options.
