Borg Artifact module now has dropper and beaker for interacting

--- a/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -397,6 +397,8 @@
   - type: ItemBorgModule
     items:
     - NodeScanner
+    - BorgDropper
+    - Beaker
 
 - type: entity
   id: BorgModuleAnomaly
