--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -418,7 +418,7 @@
     state: pda-library
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: LawyerPDA
   name: lawyer PDA
   description: For lawyers to poach dubious clients.
@@ -452,7 +452,7 @@
     state: pda-janitor
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: CaptainPDA
   name: captain PDA
   description: Surprisingly no different from your PDA.
@@ -618,7 +618,7 @@
     state: pda-science
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: HoSPDA
   name: head of security PDA
   description: Whosoever bears this PDA is the law.
@@ -633,7 +633,7 @@
     state: pda-hos
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: WardenPDA
   name: warden PDA
   description: The OS appears to have been jailbroken.
@@ -648,7 +648,7 @@
     state: pda-warden
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: SecurityPDA
   name: security PDA
   description: Red to hide the stains of passenger blood.
@@ -662,7 +662,7 @@
     state: pda-security
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: CentcomPDA
   name: CentComm PDA
   description: Light green sign of walking bureaucracy.
@@ -785,7 +785,7 @@
           - Cartridge
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: ERTLeaderPDA
   name: ERT Leader PDA
   suffix: Leader
@@ -933,7 +933,7 @@
     state: pda-boxer
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: DetectivePDA
   name: detective PDA
   description: Smells like rain... pouring down the rooftops...
@@ -1033,7 +1033,7 @@
     state: pda-seniorphysician
 
 - type: entity
-  parent: [BasePDA, BaseSecurityPDA]
+  parent: [BaseSecurityPDA, BasePDA]
   id: SeniorOfficerPDA
   name: senior officer PDA
   description: Beaten, battered and broken, but just barely useable.
