--- a/Resources/Prototypes/silicon-laws.yml
+++ b/Resources/Prototypes/silicon-laws.yml
@@ -835,7 +835,7 @@
   lawString: law-ntaggressive-4
 
 - type: siliconLawset
-  id: AggressiveLawset
+  id: NTAggressiveLawset
   laws:
   - Aggressive1
   - Aggressive2
