--- a/Resources/Prototypes/Entities/Structures/Machines/cell_equimpent.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/cell_equimpent.yml
@@ -127,7 +127,7 @@
     interfaces:
       enum.CellularFusionUiKey.Key:
         type: CellularFusionBoundUserInterface
-  - type: CellSequencer
+  - type: CellularFusion
   - type: CellClient
   - type: ApcPowerReceiver
     powerLoad: 250
