--- a/Resources/Prototypes/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_emote_sounds.yml
@@ -410,6 +410,8 @@
         volume: -6
     Salute:
       collection: Salutes
+    Blink:
+      collection: Blinks
 
 - type: emoteSounds
   id: DionaBodyEmotes
